--- a/client/css/editor.css
+++ b/client/css/editor.css
@@ -4,6 +4,10 @@
   border:4px solid #ccffff;
 }
 
+.dropdown-menu {
+  z-index:2000;
+}
+
 .rule .name {
   display:block;
   font-size:1.2em;
@@ -51,4 +55,23 @@
 .rule .scenario img {
   max-width:45%;
   padding:4px;
+}
+
+
+.btn.color {
+  width:30px;
+  height:30px;
+  padding:2px;
+  border-radius: 5px;
+  margin:2px;
+}
+
+.btn.color i {
+  border-radius: 3px;
+}
+
+.color-preview {
+  width: 120px;
+  height:30px;
+  border-radius: 5px;
 }
