--- a/client/css/editor.css
+++ b/client/css/editor.css
@@ -35,7 +35,8 @@ h4 {
 
 .rules-list .name {
   display:inline-block;
-  font-size:1.2em;
+  font-size:1.0em;
+  line-height:1.2em;
   font-weight: bold;
   padding:0;
   padding-left:4px;
@@ -45,11 +46,11 @@ h4 {
   text-shadow: 0px 1px rgba(255,255,255,0.4);
   background-color: transparent;
   border:1px solid transparent;
-  width:180px;
+  width:160px;
 }
 
-.rules-list .name:hover,
-.rules-list .name:focus {
+.rules-list input.name:hover,
+.rules-list input.name:focus {
   background-color: rgba(255,255,255,0.3);
   border:1px solid rgba(255,255,255,0.5);
   outline: none;
@@ -65,6 +66,44 @@ h4 {
   -webkit-box-shadow: inset 0 0 2px 1px rgba(255,255,255,0.4);
   box-shadow: inset 0 0 2px 1px rgba(255,255,255,0.4);
 }
+
+.rules-list .rule-container .header {
+  height:40px;
+}
+
+.rules-list .rule-container select {
+  background-color: transparent;
+  width:190px;
+  border:none;
+  font-weight:bold;
+  height:19px;
+  outline: none;
+  color:#222;
+  margin:0;
+  padding:0;
+}
+
+.rules-list .rule-container .circle {
+  display:inline-block;
+  width:12px;
+  height:12px;
+  margin-top:3px;
+  border-radius:12px;
+  background-color: gray;
+  border:1px solid rgba(0,0,0,0.2);
+}
+
+.rules-list .rule-container .circle.true {
+  background-color: green;
+  border:1px solid rgba(0,0,0,0.2);
+}
+
+.rules-list .rule-container .icon {
+  width:32px;
+  height:32px;
+  padding-top:1px;
+  float:left;
+}
 .rules-list .rule-container ul {
   background-color: rgba(0,0,0,0.3);
   padding-top:7px;
@@ -74,31 +113,26 @@ h4 {
   box-shadow: inset 0 1px 1px 1px rgba(0,0,0,0.4);
 }
 
-.rules-list .rule-container .triangle.disclosed {
-  display:inline-block;
-  margin-left:3px;
-  width: 0px;
-  height: 0px;
-  border-style: solid;
-  border-width: 7px 0 7px 12.1px;
-  border-color: transparent transparent transparent rgba(0,0,0,0.4);
-}
-
 .rules-list .rule-container .triangle {
   display:inline-block;
-  margin-left:3px;
   width: 0px;
   height: 0px;
+  margin-left:2px;
   border-style: solid;
-  border-width: 12.1px 7px 0 7px;
+  border-width: 10.4px 6px 0 6px;
   border-color: rgba(0,0,0,0.4) transparent transparent transparent;
+}
+
+.rules-list .rule-container .triangle.disclosed {
+  border-width: 6px 0 6px 10.4px;
+  border-color: transparent transparent transparent rgba(0,0,0,0.4);
 }
 
 .rules-list .rule-container.event {
   background-color:#5BC15C;
 }
 .rules-list .rule-container.group {
-  background-color:#E63B34;
+  background-color:#4B91B3;
 }
 
 .rules-list .rule {
