--- a/client/css/editor.less
+++ b/client/css/editor.less
@@ -44,7 +44,9 @@ h4 {
     border:1px solid transparent;
     width:160px;
   }
-
+  input.name {
+    width:120px;
+  }
   input.name:hover,
   input.name:focus {
     background-color: rgba(255,255,255,0.3);
@@ -62,11 +64,14 @@ h4 {
     -webkit-box-shadow: inset 0 0 2px 1px rgba(255,255,255,0.4);
     box-shadow: inset 0 0 2px 1px rgba(255,255,255,0.4);
 
-    &.event { background-color:#5BC15C; }
-    &.group { background-color:#5BA4CD; }
+    &.event {
+      background-color:#5BC15C;
+      .header { height:40px; }
+    }
 
-    .header {
-      height:40px;
+    &.group {
+      background-color:#5BA4CD;
+      .header { height:50px; }
     }
 
     .circle {
@@ -99,6 +104,7 @@ h4 {
       color:#222;
       margin:0;
       padding:0;
+      margin-top:4px;
     }
 
     ul {
