You can now re-arrange rules and they execute with flow, circle states, etc...

--- a/client/css/editor.less
+++ b/client/css/editor.less
@@ -80,10 +80,14 @@ h4 {
       height:12px;
       margin-top:3px;
       border-radius:12px;
-      background-color: gray;
+      background-color: transparent;
       border:1px solid rgba(0,0,0,0.2);
       &.true {
         background-color: green;
+        border:1px solid rgba(0,0,0,0.2);
+      }
+      &.false {
+        background-color: gray;
         border:1px solid rgba(0,0,0,0.2);
       }
     }
