--- a/client/css/editor.less
+++ b/client/css/editor.less
@@ -18,6 +18,11 @@ h4 {
   padding:10px;
 }
 
+.zerospace {
+  overflow:visible;
+  height:0;
+}
+
 .white-box {
   background-color:white;
   margin:5px;
@@ -30,6 +35,15 @@ h4 {
   z-index:2000;
 }
 
+#actor-box {
+  .tab-pane {
+    height:600px;
+    overflow-y:scroll;
+  }
+  .nav {
+    margin-bottom:3px;
+  }
+}
 .rules-list {
   .name {
     display:inline-block;
@@ -44,14 +58,14 @@ h4 {
     border:1px solid transparent;
     width:160px;
   }
+
   input.name {
     width:120px;
-  }
-  input.name:hover,
-  input.name:focus {
-    background-color: rgba(255,255,255,0.3);
-    border:1px solid rgba(255,255,255,0.5);
-    outline: none;
+    &:hover, &:focus {
+      background-color: rgba(255,255,255,0.3);
+      border:1px solid rgba(255,255,255,0.5);
+      outline: none;
+    }
   }
 
   .rule-container {
@@ -109,16 +123,19 @@ h4 {
       margin:0;
       padding:0;
       margin-top:4px;
+      margin-bottom:4px;
     }
 
     ul {
       background-color: rgba(0,0,0,0.3);
       padding-top:7px;
       padding-bottom:2px;
+      min-height:12px;
       -moz-box-shadow: inset 0 1px 1px 1px rgba(0,0,0,0.4);
       -webkit-box-shadow: inset 0 1px 1px 1px rgba(0,0,0,0.4);
       box-shadow: inset 0 1px 1px 1px rgba(0,0,0,0.4);
     }
+
     .triangle {
       display:inline-block;
       width: 0px;
@@ -162,6 +179,7 @@ h4 {
 
       img {
         max-width:45%;
+        max-height:75px;
         padding:4px;
       }
     }
