About to create the rule composition view

--- a/client/css/editor.less
+++ b/client/css/editor.less
@@ -280,3 +280,18 @@ h4 {
     background-color: rgba(100,100,255,0.4);
   }
 }
+
+#composeRuleModal {
+  .scenario {
+    .before,.after {
+      width:40%;
+      display:inline-block;
+      text-align:center;
+    }
+    .arrow {
+      display:inline-block;
+      text-align:center;
+      width:20px;
+    }
+  }
+}
