Bedtime. You can now record rules and create new container groups. It all fucking works.

--- a/client/css/editor.less
+++ b/client/css/editor.less
@@ -35,6 +35,10 @@ h4 {
   z-index:2000;
 }
 
+.controls {
+  height: 50px;
+}
+
 #actor-box {
   .tab-pane {
     height:600px;
@@ -180,7 +184,7 @@ h4 {
       img {
         max-width:45%;
         max-height:75px;
-        padding:4px;
+        padding-top:4px;
       }
     }
   }
