--- a/client/css/editor.less
+++ b/client/css/editor.less
@@ -37,7 +37,46 @@ h4 {
 
 .controls {
   height: 50px;
+
+  label {
+    float:left;
+    margin-left:5px;
+    padding-left:10px;
+    margin-top:17px;
+    color:#999;
+  }
+
+  .center {
+    display:inline-block;
+    margin:auto;
+    margin-top:12px;
+  }
+  .right {
+    margin-right:5px;
+    float:right;
+    margin-top:12px;
+    display:inline-block;
+  }
+
+  .left {
+    float:left;
+    margin-top:12px;
+    display:inline-block;
+  }
 }
+
+#rules-dropdown {
+  span.badge:empty {
+    height:10px;
+    display:inline-block;
+    padding-left:7px;
+    padding-right:7px;
+    position:relative;
+    top:2px;
+    left:-6px;
+  }
+}
+
 
 #actor-box {
   .tab-pane {
@@ -83,11 +122,13 @@ h4 {
     box-shadow: inset 0 0 2px 1px rgba(255,255,255,0.4);
 
     &.event {
+      cursor: pointer;
       background-color:#5BC15C;
       .header { height:40px; }
     }
 
     &.group {
+      cursor: move;
       background-color:#5BA4CD;
       .header { height:50px; }
     }
@@ -141,6 +182,7 @@ h4 {
     }
 
     .triangle {
+      cursor: pointer;
       display:inline-block;
       width: 0px;
       height: 0px;
@@ -156,6 +198,7 @@ h4 {
   }
 
   .rule {
+    cursor: move;
     background-color:#ddd;
     margin-bottom:3px;
     border: 1px solid rgba(0,0,0,0.2);
@@ -236,8 +279,9 @@ h4 {
 }
 
 .color-preview {
-  width: 114px;
-  height: 40px;
+  width: 112px !important;
+  height: 40px !important;
+  background-image: none !important;
   border: 2px solid #ccc;
   border-radius: 5px;
   margin-bottom: 5px;
@@ -271,6 +315,7 @@ h4 {
     }
 
     .item {
+      cursor: pointer;
       display:inline-block;
       text-align: center;
       padding-top:5px;
