Variables can now be assigned and incremented during rule creation

--- a/client/css/editor.less
+++ b/client/css/editor.less
@@ -28,6 +28,7 @@ body.tool-delete .stage,
 body.tool-delete .event,
 body.tool-delete #definitions .item,
 body.tool-delete #appearances .item,
+body.tool-delete .rule,
 body.tool-delete .group {
   cursor: url(../img/cursor_trashcan.png), url(img/cursor_trashcan.png), default !important;
 }
