--- a/client/css/editor.less
+++ b/client/css/editor.less
@@ -14,6 +14,7 @@ body {
 
 body.tool-pointer .stage {
 }
+
 body.tool-paint .stage,
 body.tool-paint #appearances .item,
 {
@@ -29,6 +30,7 @@ body.tool-delete .event,
 body.tool-delete #definitions .item,
 body.tool-delete #appearances .item,
 body.tool-delete .rule,
+body.tool-delete .variable,
 body.tool-delete .group {
   cursor: url(../img/cursor_trashcan.png), url(img/cursor_trashcan.png), default !important;
 }
