Support for variable actions, removing actions when they're no-ops and fixes to fog-of-war recording masking

--- a/client/css/editor.less
+++ b/client/css/editor.less
@@ -430,7 +430,7 @@ h4 {
     border:1px solid #ccc;
     top:-160px;
     text-align:left;
-    overflow:scroll;
+    overflow-y:scroll;
 
     ul {
       list-style-type:none;
@@ -439,6 +439,20 @@ h4 {
       li {
         border-bottom:1px solid #ccc;
         line-height:40px;
+      }
+    }
+    .action {
+      input {
+        width:40px;
+        padding:0;
+        padding-left:5px;
+        margin:0;
+      }
+      select {
+        width:80px;
+        margin-top:7px;
+        height:22px;
+        font-size:0.9em;
       }
     }
     .slot {
