--- a/client/css/editor.less
+++ b/client/css/editor.less
@@ -441,7 +441,11 @@ h4 {
         line-height:40px;
       }
     }
-    .action {
+    .action, .condition {
+      img {
+        max-width:40px;
+        max-height:40px;
+      }
       input {
         width:40px;
         padding:0;
@@ -449,7 +453,6 @@ h4 {
         margin:0;
       }
       select {
-        width:80px;
         margin-top:7px;
         height:22px;
         font-size:0.9em;
