--- a/client/css/editor.less
+++ b/client/css/editor.less
@@ -100,6 +100,9 @@ h4 {
   }
 }
 
+#rules, #variables {
+  position:relative;
+}
 #rules-dropdown {
   span.badge:empty {
     height:10px;
@@ -114,8 +117,14 @@ h4 {
 
 
 #sidebar-box {
-  .tab-pane {
+
+  .tab-content {
+    overflow:visible;
+  }
+
+  .tab-pane-inner {
     height:600px;
+    position:relative;
     overflow-y:scroll;
   }
   .nav {
