You can now ignore appearances and toggle them back on. Toggles in the conditions panel are styled now, and Rules see variables equal to zero

--- a/client/css/editor.less
+++ b/client/css/editor.less
@@ -449,6 +449,23 @@ h4 {
         line-height:40px;
       }
     }
+    .condition.ignored {
+      opacity: 0.4;
+      .ignore_toggle {
+        background:url(/img/visible.png) top right no-repeat;
+      }
+    }
+
+    .ignore_toggle {
+      float:right;
+      width:25px;
+      height:13px;
+      margin-top:13px;
+      margin-right:5px;
+      display:inline-block;
+      background:url(/img/visible.png) top left no-repeat;
+    }
+
     .action, .condition {
       img {
         max-width:40px;
