In the middle of the transition to mongo—basic stuff is up and working, about to remove s3 storage

--- a/website/web/src/views/worlds.html
+++ b/website/web/src/views/worlds.html
@@ -10,7 +10,7 @@
 	</div>
 	<div ng-show="worlds.length" class="world-collection">
 		<div ng-repeat="world in worlds" class="span3">
-			<a ng-href="#/world/{{world.id}}"><h4>{{world.title}}</h4></a>
+			<a ng-href="#/world/{{world._id}}"><h4>{{world.title}}</h4></a>
 		</div>
 	</div>
 </div>
