Preparing to rehash how the word "id" and "identifier" are used because it makes no sense

--- a/website/web/editor/css/editor.css
+++ b/website/web/editor/css/editor.css
@@ -1,5 +1,5 @@
 body {
-  background: url(/img/background.png) top left;
+  background: url(../img/background.png) top left;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
