Unified around _id for an instance ID and definition_id when referring to an actor definition in a descriptor of ActorSprite. You can use the interface now!

--- a/website/web/css/editor.less
+++ b/website/web/css/editor.less
@@ -452,7 +452,7 @@ h4 {
     .condition.ignored {
       opacity: 0.4;
       .ignore_toggle {
-        background:url(/img/visible.png) top right no-repeat;
+        background:url(../img/visible.png) top right no-repeat;
       }
     }
 
@@ -463,7 +463,7 @@ h4 {
       margin-top:13px;
       margin-right:5px;
       display:inline-block;
-      background:url(/img/visible.png) top left no-repeat;
+      background:url(../img/visible.png) top left no-repeat;
     }
 
     .action, .condition {
