--- a/website/web/editor/css/editor.less
+++ b/website/web/editor/css/editor.less
@@ -176,6 +176,17 @@ h4 {
       .header { height:50px; }
     }
 
+    .keycode {
+      padding-left:4px;
+      padding-right:4px;
+      background-color:rgba(255,255,255,0.2);
+      border:1px solid rgba(255,255,25,0.0);
+    }
+    .keycode:hover {
+      background-color:rgba(255,255,255,0.4);
+      border:1px solid rgba(255,255,25,0.6);
+    }
+
     .circle {
       display:inline-block;
       width:12px;
