--- a/website/web/editor/css/editor.less
+++ b/website/web/editor/css/editor.less
@@ -104,6 +104,8 @@ h4 {
   position:relative;
 }
 #rules-dropdown {
+  left:-137px;
+  
   span.badge:empty {
     height:10px;
     display:inline-block;
@@ -196,7 +198,7 @@ h4 {
       background-color: transparent;
       border:1px solid rgba(0,0,0,0.2);
       &.true {
-        background-color: green;
+        background-color: #74E535;
         border:1px solid rgba(0,0,0,0.2);
       }
       &.false {
