Improvements to the appearance of the worlds page—its now a profile

--- a/website/web/css/main.less
+++ b/website/web/css/main.less
@@ -10,3 +10,23 @@ body {
   padding:25px;
   padding-top:0px;
 }
+
+.world {
+	a {
+		padding:5px;
+		border:1px solid rgba(0,0,0,0.1);
+		margin-bottom:20px;
+		background-color:#eee;
+		display:inline-block;
+		border-radius:5px;
+	}
+	a:hover {
+		border:1px solid rgba(100,100,255, 0.5);
+		text-decoration:none;
+		background-color:#ddd;
+	}
+
+	img {
+		border-radius:4px;
+	}
+}
