More style changes to profile pages, better navigation within the editor

--- a/website/web/css/main.less
+++ b/website/web/css/main.less
@@ -11,7 +11,7 @@ body {
   padding-top:0px;
 }
 
-.world {
+.world, .stage {
 	a {
 		padding:5px;
 		border:1px solid rgba(0,0,0,0.1);
@@ -29,4 +29,24 @@ body {
 	img {
 		border-radius:4px;
 	}
+}
+
+.new-item {
+	background-color:#eee;
+	text-transform:none;
+
+	div {
+		border-radius:5px;
+		border:3px dashed #ccc;
+		padding:100px;
+		text-align:center;
+		font-size:1.5em;
+		font-weight:bold;
+		color:#333;
+	}
+}
+
+.new-item:hover {
+	text-decoration:none;
+	background-color:#ddd;
 }
