--- a/website/web/src/views/sign-in.html
+++ b/website/web/src/views/sign-in.html
@@ -1,13 +1,13 @@
 
 <div class="row">
-  <div class="whitebox span6 offset3">
+  <div class="whitebox span6 offset3" style="margin-top:60px;">
     <form class="form">
       <h3>Welcome back!</h3>
       <p>Sign in to access your account. Just getting started? <a href="#sign-up">Create a free account.</a></p>
 
       <div class="control-group">
         <div class="controls">
-          <input ng-model="credentials.email" type="text" id="Email Address" placeholder="Email Address"/>
+          <input ng-model="credentials.nickname" type="text" id="Nickname" placeholder="Nickname"/>
         </div>
       </div>
 
