--- a/website/web/css/main.css
+++ b/website/web/css/main.css
@@ -9,7 +9,8 @@ body {
   padding: 25px;
   padding-top: 0px;
 }
-.world a {
+.world a,
+.stage a {
   padding: 5px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
@@ -17,11 +18,30 @@ body {
   display: inline-block;
   border-radius: 5px;
 }
-.world a:hover {
+.world a:hover,
+.stage a:hover {
   border: 1px solid rgba(100, 100, 255, 0.5);
   text-decoration: none;
   background-color: #ddd;
 }
-.world img {
+.world img,
+.stage img {
   border-radius: 4px;
+}
+.new-item {
+  background-color: #eee;
+  text-transform: none;
+}
+.new-item div {
+  border-radius: 5px;
+  border: 3px dashed #ccc;
+  padding: 100px;
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: bold;
+  color: #333;
+}
+.new-item:hover {
+  text-decoration: none;
+  background-color: #ddd;
 }
