--- a/web/src/views/profile.html
+++ b/web/src/views/profile.html
@@ -10,16 +10,9 @@
 <div class="row">
 	<div class="span12">
 		<h3 style="float:left;">My Worlds</h3>
-		<div style="float:right; display:inline-block; margin-top:14px;">
-			<a ng-click="new_world()" class="btn btn-primary"><i class="icon-pencil"></i> New World</a>
-		</div>
-
 	</div>
 
-	<div ng-show="!worlds.length">
-		You haven't created any worlds yet.
-	</div>
-	<div ng-show="worlds.length" class="world-collection">
+	<div class="world-collection">
 		<div ng-repeat="world in worlds" class="span4 world">
 			<a ng-href="#/world/{{world._id}}">
 				<img src="{{world.thumbnail}}">
