--- a/web/src/views/world.html
+++ b/web/src/views/world.html
@@ -1,18 +1,22 @@
 
 <div class="row">
-	<div class="span12" style="background-color: #466F7E; position:relative; z-index:-1; top:-22px;">
+	<div class="span12" style="background-color: #466F7E; position:relative; top:-22px;">
 
 		<div style="position:absolute; z-index:-2; background:url({{stages[stages.length-1].thumbnail}}) center center; background-size:cover; -webkit-filter: blur(5px); display:block; width:100%; height:100%;"></div>
 
 		<div style="position:absolute; z-index:-1; display:block; width:100%; height:100%; background-color:rgba(0,0,0,0.3);"></div>
 
 		<div style="padding:25px; padding-top:90px;">
-			<div style="float:right; display:inline-block; margin-top:20px;">
-				<a ng-click="publish()" class="btn btn-large btn-success"><i class="icon-pencil"></i> {{publish_action_text()}}</a>
+			<div ng-show="world.published == false" style="float:right; display:inline-block; margin-top:20px;">
+				<a ng-click="publish()" class="btn btn-large btn-success"><i class="icon-upload"></i> Publish</a>
+			</div>
+			<div ng-show="world.published == true" style="float:right; display:inline-block; margin-top:20px;">
+				<a ng-click="publish()" class="btn btn-large"><i class="icon-download"></i> Unpublish</a>
+				<a ng-click="share()" class="btn btn-large btn-success" style="margin-left:10px;"><i class="icon-share"></i> Share</a>
 			</div>
 
 			<div style="margin-left:20px;">
-				<h3 style="margin-bottom:0; color:white;">{{world.title}}</h3>
+				<h3 style="margin-bottom:0; color:white;">{{world.title}} <a ng-click="edit_details()"><i class="icon-pencil" style="color:white;"></i></a></h3>
 				<div style="color:rgba(255,255,255,0.7);">{{world.description}}</div>
 			</div>
 		</div>
@@ -62,6 +66,18 @@
 
 <div id="publishModal"
 	class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static" ng-cloak>
+	<div class="modal-header"><h4>Share your World!</h4></div>
+	<div class="modal-body">
+		<p>
+			Copy-paste the link in the box below to share your world with your friends! When they click the
+			link, they'll be able to view your world, but not make any changes.
+		</p>
+		<input value="{{share_url()}}" style="width:485px; font-size:1.3em; margin-right:10px;"/><a target="_blank" href="{{share_url()}}">Visit!</a>
+	</div>
+	<div class="modal-footer">
+	    <button class="btn" data-dismiss="modal" aria-hidden="true">Done</button>
+	</div>
+
 </div>
 
 
