Fix for registration not being possible

--- a/web/src/views/profile.html
+++ b/web/src/views/profile.html
@@ -19,7 +19,7 @@
 				<h4 style="color:black; margin-bottom:3px;">{{world.title}}</h4>
 			</a>
 		</div>
-		<a class="span4 new-item" ng-click="new_stage()"><div>+ New World</div></a>
+		<a class="span4 new-item" ng-click="new_world()"><div>+ New World</div></a>
 	</div>
 </div>
 
