Preparing to work on the tutorial

--- a/web/src/views/parents.html
+++ b/web/src/views/parents.html
@@ -7,16 +7,30 @@
 	</p>
 	<h4>Frequently Asked Questions</h4>
 	<h5>Q: Is Codako free?</h5>
+		<p>
+		Yes, Codako is completely free to play and learn. It was developed because other solutions were becoming outdated, and is part of the not-for-profit education initiative at <a href="http://Foundry376.com/">Foundry376</a>. At some point in the future, there may be an optional subscription available which allows you to store more worlds if costs become significant.
+		</p>
+
 	<h5>Q: Who developed Codako?</h5>
 		<p>
 		Codako was developed by Ben Gotow, founder and principal at Foundry376 in Nashville, TN. The core concepts behind the "programming by demonstration" environment were developed and extensively tested by Apple's Advanced Research Group in the 1990's, and Codako is a modern re-envisioning of their platform merged with the "share and remix" concept of Github "Gists".
 		</p>
 
 	<h5>Q: Is Codako COPPA complaint?</h5>
+		<p>COPPA is federal legislation that governs how data about children can be collected and stored. Codako does not require any information that might identify your child. Sign up requires an email address and nickname, but you do not need to reveal you child's identity in any way. Your child will never be asked for personally identifying information while they play with Codako.
+		</p>
+
 	<h5>Q: How does the site work?</h5>
+		<p>Codako runs in a web browser and all of your game information is stored in the cloud. There's nothing to download, and no plugins are required. From a technical perspective, Codako is written in Coffeescript and HTML5 with the AngularJS and EaselJS frameworks. The Codako backend is a NodeJS app running on Heroku, with MongoDB for data storage.
+		</p>
 	<h5>Q: Why does my child need an account?</h5>
+		<p>Creating a free account allows us to save your games and identify which features of Codako you've mastered.</p>
+
 	<h5>Q: How do children interact on the site?</h5>
-	<h5>Q: How is the site moderated?</h5>
+		<p>Codako allows young learners to publish the games they create, and others can ask questions about the games and see how they were created to sharpen their skills and build better games themselves. These features will be evolving significantly as the platform develops.
+		</p>
+
 	<h5>Q: I'd like to use Codako in my school!</h5>
+		<p>Great! I'd love for you to use Codako. Reach out to me at ben@foundry376.com so we can help get you started!
   </div>
 </div>
