--- a/web/src/views/world.html
+++ b/web/src/views/world.html
@@ -1,8 +1,10 @@
 
 <div class="row">
-	<div class="span12" style="background-color: #466F7E; position:relative; top:-22px;">
+	<div class="span12" style="position:relative; top:-22px;">
 
-		<div style="position:absolute; z-index:-2; background:url({{stages[stages.length-1].thumbnail}}) center center; background-size:cover; -webkit-filter: blur(5px); display:block; width:100%; height:100%;"></div>
+		<div style="position:absolute; z-index:-2; overflow:hidden; display:block; width:100%; height:100%; margin-left:0px; margin-top:10px;">
+			<div style="background:url({{stages[stages.length-1].thumbnail}}) center center; background-size:cover; -webkit-filter: blur(5px); width:100%; height:100%; margin-top:-10px;"></div>
+		</div>
 
 		<div style="position:absolute; z-index:-1; display:block; width:100%; height:100%; background-color:rgba(0,0,0,0.3);"></div>
 
