Extensive work on the tutorial system—need a way of pre baking the actors as well as the stage… Sort of annoying actors are in separate files...

--- a/web/src/views/home.html
+++ b/web/src/views/home.html
@@ -4,8 +4,8 @@
   <h2>Create your own games!</h2>
   <p style="width:50%;">Codako was inspired by the KidSIM research of the 1990's, and is targeted at young learners ages 6-12.</p>
   <p>
-    <a class="btn btn-large">
-      See it in Action
+    <a class="btn btn-large" href="/stage-editor/#/tour">
+      Take a Tour
     </a>
   </p>
 </div>
