About to begin work on a refactor to make it possible to duplicate worlds (for tutorial)

--- a/web/src/views/home.html
+++ b/web/src/views/home.html
@@ -1,51 +1,72 @@
 
-<div class="row">
-  <div class="hero-unit" style="background:url(/img/splash.png) top center; margin-top:-15px;">
+<div class="hero">
   <h2>Create your own games!</h2>
-  <p style="width:50%;">Codako was inspired by the KidSIM research of the 1990's, and is targeted at young learners ages 6-12.</p>
-  <p>
+  <div>
+  	<p>Codako was inspired by the KidSIM research of the 1990's,<br>
+  	and is targeted at young learners ages 6-12.</p>
+  	<br>
     <a class="btn btn-large" href="/stage-editor/#/tour">
       Take a Tour
     </a>
-  </p>
-</div>
-
-
-<div class="row">
-	<div class="span4">
-	  <h3>Create Worlds</h3>
-	  <p>Use Codako's built-in drawing tools to create characters and place them into your game world. You can create mario-style adventure games, simulations, zelda-style exploration games, and more!</p>
-	  <p><a class="btn" href="#">View details &raquo;</a></p>
-	</div>
-	<div class="span4">
-	  <h3>Record Rules</h3>
-	  <p>Bring your world to life by turning on the recorder and demonstrating what you want to happen! Watch as bits of code are written automatically and make the changes you want.</p>
-	  <p><a class="btn" href="#">View details &raquo;</a></p>
-	</div>
-	<div class="span4">
-	  <h3>Learn Core Concepts</h3>
-	  <p>Codako introduces many programming concepts, without young learners needing to write actual code. It lays a foundation of understanding that students can carry with them as they learn to program.
-	  </p>
-	  <p><a class="btn" href="#">View details &raquo;</a></p>
 	</div>
 </div>
 
+<div class="home-region green">
+	<div class="container">
+		<div class="row">
+			<div class="span4">
+			  <h3>Create Worlds</h3>
+			  <p>Use Codako's built-in drawing tools to create characters and place them into your game world. You can create mario-style adventure games, simulations, zelda-style exploration games, and more!</p>
+			  <p><a class="btn" href="#">View details &raquo;</a></p>
+			</div>
+			<div class="span4">
+			  <h3>Record Rules</h3>
+			  <p>Bring your world to life by turning on the recorder and demonstrating what you want to happen! Watch as bits of code are written automatically and make the changes you want.</p>
+			  <p><a class="btn" href="#">View details &raquo;</a></p>
+			</div>
+			<div class="span4">
+			  <h3>Learn Core Concepts</h3>
+			  <p>Codako introduces many programming concepts, without young learners needing to write actual code. It lays a foundation of understanding that students can carry with them as they learn to program.
+			  </p>
+			  <p><a class="btn" href="#">View details &raquo;</a></p>
+			</div>
+		</div>
+	</div>
+</div>
 
+<div class="home-region">
+<div class="container">
 <div class="row">
-	<div class="span4">
+	<div class="span7">
 	  <h3>Research Based Approach</h3>
 	  <p>Codako is heavily inspired by the KidSIM research conducted by Apple's Advanced Technologies Group in the late 1990s, which showed that students were very successful in programming-by-demonstration environments. As Codako is developed, several more studies will be conducted around it's effectiveness.</p>
 	  <p><a class="btn" href="#">View details &raquo;</a></p>
 	</div>
-	<div class="span4">
+</div>
+</div>
+</div>
+
+<div class="home-region light-green">
+<div class="container">
+<div class="row">
+	<div class="offset5 span7">
 	  <h3>Advanced Features</h3>
 	  <p>Codako was designed to be simple, and students can learn more about advanced features as they need them. It supports variables, characters with multiple appearances, event-triggered rules, rule containers that teach control flow, and more!
 	  </p>
 	  <p><a class="btn" href="#">View details &raquo;</a></p>
 	</div>
-	<div class="span4">
-	  <h3>Free Forever</h3>
-	  <p>Codako will always be free to play, and will never collect information from it's users beyond the required email address, nickname and password.</p>
+</div>
+</div>
+</div>
+
+<div class="home-region">
+<div class="container">
+<div class="row">
+	<div class="span7">
+	  <h3>Built with love</h3>
+	  <p>Codako will always be free to play, and will never collect information beyond the required email address, nickname and password. 20 years ago, I learned to program using Apple's KidSIM, and Codako is my effort to bring back the platform that inspired me in my childhood.</p>
 	  <p><a class="btn" href="#">View details &raquo;</a></p>
 	</div>
+</div>
+</div>
 </div>
