--- a/web/src/views/sign-in.html
+++ b/web/src/views/sign-in.html
@@ -1,6 +1,7 @@
 
+<div class="container">
 <div class="row">
-  <div class="whitebox span6 offset3" style="margin-top:60px;">
+  <div class="whitebox span4 offset4" style="margin-top:50px;">
     <form class="form">
       <h3>Welcome back!</h3>
       <p>Sign in to access your account. Just getting started? <a href="#sign-up">Create a free account.</a></p>
@@ -18,10 +19,9 @@
         </div>
       </div>
 
-      <div style="float:right;">
-        <button class="btn btn-primary" ng-click="signIn()">Sign In</button>
-      </div>
+      <button class="btn btn-primary" ng-click="signIn()">Sign In</button>
 
     </form>
   </div>
+</div>
 </div>
