--- a/web/src/views/sign-up.html
+++ b/web/src/views/sign-up.html
@@ -1,9 +1,10 @@
-
+<div class="container">
 <div class="row">
-  <div class="whitebox span6 offset3">
+  <div class="whitebox span4 offset4" style="margin-top:50px; margin-bottom:50px;">
     <h3>Welcome to Codako!</h3>
     <p>Creating an account allows you to save the worlds you create, and it's completely free.
-      You do not need to provide your real name or any other personal information.
+      You do not need to provide your real name or any other personal information. If you are under
+      the age of 13, please ask your parents before signing up.
     </p>
     <form class="form">
 
@@ -62,4 +63,5 @@
     </form>
 
   </div>
+</div>
 </div>
