--- a/web/css/main.less
+++ b/web/css/main.less
@@ -1,14 +1,65 @@
-body {
-  padding-bottom: 40px;
-  background-color: #f5f5f5;
+html, body {
+	background-color: #f5f5f5;
+	font-family:'Varela Round';
+	margin:0;
+	padding:0;
+	height:100%;
 }
 
 .whitebox {
-  background-color:white;
-  border-radius:4px;
-  border:1px solid #ccc;
-  padding:25px;
-  padding-top:0px;
+	background-color:white;
+	border-radius:4px;
+	border:1px solid #ccc;
+	padding:25px;
+	padding-top:0px;
+}
+
+.navbar.navbar-fixed-top {
+	border-top:4px solid #6db33f;
+}
+
+.hero {
+	margin-top:100px;
+	margin-bottom:60px;
+	text-align:center;
+	display:block;
+	h2, p {
+		display:inline-block;
+		padding-left:10px;
+		padding-right:10px;
+		background-color:rgba(0,0,0,0.2);
+	}
+}
+
+.home-region {
+	&.green {
+		background-color:#6db33f;
+		color:white;
+	}
+	&.light-green {
+		background-color:#EBF1E7;
+	}
+	padding-top:45px;
+	padding-bottom:45px;
+}
+
+.footer {
+	background-color:#222;
+	color:#ddd;
+	clear:both;
+	position:absolute;
+	bottom:0;
+	width:100%;
+	padding-top:10px;
+	padding-bottom:30px;
+	.navbar {
+		position:relative;
+		left:-15px;
+		font-size:0.9em;
+	}
+	a {
+		color:#6db33f;
+	}
 }
 
 .world, .stage {
@@ -50,3 +101,4 @@ body {
 	text-decoration:none;
 	background-color:#ddd;
 }
+
