--- a/web/stage-editor/css/editor.css
+++ b/web/stage-editor/css/editor.css
@@ -7,6 +7,12 @@ body {
   -ms-user-select: none;
   user-select: none;
 }
+.editor {
+  width: 1180px;
+  margin: auto;
+  padding-top: 60px;
+  font-family: sans-serif;
+}
 .stage {
   background-color: black;
 }
