--- a/web/stage-editor/css/editor.less
+++ b/web/stage-editor/css/editor.less
@@ -8,6 +8,12 @@ body {
   user-select: none;
 }
 
+.editor {
+  width:1180px;
+  margin:auto;
+  padding-top:60px;
+  font-family:sans-serif;
+}
 .stage {
   background-color:black;
 }
