Worlds can now be cloned, and the tutorial has a new introduction that starts more slowly.

--- a/web/src/views/home.html
+++ b/web/src/views/home.html
@@ -5,7 +5,7 @@
   	<p>Codako was inspired by the KidSIM research of the 1990's,<br>
   	and is targeted at young learners ages 6-12.</p>
   	<br>
-    <a class="btn btn-large" href="/stage-editor/#/tour">
+    <a class="btn btn-large" ng-click="startTour()">
       Take a Tour
     </a>
 	</div>
