--- a/web/src/views/profile.html
+++ b/web/src/views/profile.html
@@ -1,27 +1,27 @@
-
-<div class="row">
-	<div class="span12" style="margin-top:20px; margin-bottom:20px;">
-		<img src="" style="background-color: #eee; width:90px;height:90px;float:left; margin-right:15px;"/>
-		<h3 style="margin-bottom:0; color:black;">{{user().nickname}}</h3>
-		<div style="color:rgba(0,0,0,0.7);">User statistics go here.</div>
-	</div>
-</div>
-
-<div class="row">
-	<div class="span12">
-		<h3 style="float:left;">My Worlds</h3>
-	</div>
-
-	<div class="world-collection">
-		<div ng-repeat="world in worlds" class="span4 world">
-			<a ng-href="#/world/{{world._id}}">
-				<img ng-src="{{world.thumbnail}}">
-				<h4 style="color:black; margin-bottom:3px;">{{world.title}}
-					<span ng-show="{{world.published}}" style="float:right;"><i class="icon-globe"></i></span>
-				</h4>
-			</a>
+<div class="container">
+	<div class="row">
+		<div class="span12" style="margin-top:40px; margin-bottom:20px;">
+			<img src="" style="background-color: #eee; width:90px;height:90px;float:left; margin-right:15px;"/>
+			<h3 style="margin-bottom:0; color:black;">{{user().nickname}}</h3>
+			<div style="color:rgba(0,0,0,0.7);">User statistics go here.</div>
 		</div>
-		<a class="span4 new-item" ng-click="new_world()"><div>+ New World</div></a>
+	</div>
+
+	<div class="row">
+		<div class="span12">
+			<h3 style="float:left;">My Worlds</h3>
+		</div>
+
+		<div class="world-collection">
+			<div ng-repeat="world in worlds" class="span4 world">
+				<a ng-href="#/world/{{world._id}}">
+					<img ng-src="{{world.thumbnail}}">
+					<h4 style="color:black; margin-bottom:3px;">{{world.title}}
+						<span ng-show="{{world.published}}" style="float:right;"><i class="icon-globe"></i></span>
+					</h4>
+				</a>
+			</div>
+			<a class="span4 new-item" ng-click="new_world()"><div>+ New World</div></a>
+		</div>
 	</div>
 </div>
-
