--- a/web/src/views/world.html
+++ b/web/src/views/world.html
@@ -1,14 +1,14 @@
-
+<div class="container">
 <div class="row">
-	<div class="span12" style="position:relative; top:-22px;">
+	<div class="span12" style="position:relative; top:-15px;">
 
-		<div style="position:absolute; z-index:-2; overflow:hidden; display:block; width:100%; height:100%; margin-left:0px; margin-top:10px;">
+		<div style="position:absolute; overflow:hidden; display:block; width:100%; height:100%; margin-left:0px; margin-top:10px;">
 			<div style="background:url({{stages[stages.length-1].thumbnail}}) center center; background-size:cover; -webkit-filter: blur(5px); width:100%; height:100%; margin-top:-10px;"></div>
 		</div>
 
-		<div style="position:absolute; z-index:-1; display:block; width:100%; height:100%; background-color:rgba(0,0,0,0.3);"></div>
+		<div style="position:absolute; z-index:1; display:block; width:100%; height:100%; background-color:rgba(0,0,0,0.3);"></div>
 
-		<div style="padding:25px; padding-top:90px;">
+		<div style="padding:25px; padding-top:90px; position:relative; z-index:2;">
 			<div ng-show="world.published == false" style="float:right; display:inline-block; margin-top:20px;">
 				<a ng-click="publish()" class="btn btn-large btn-success"><i class="icon-upload"></i> Publish</a>
 			</div>
@@ -92,3 +92,4 @@
 			</div>
 		</div>
 	</div>
+</div>
