Adding checkerboard pattern to rules

--- a/web/stage-editor/css/editor.less
+++ b/web/stage-editor/css/editor.less
@@ -287,6 +287,8 @@ h4 {
       }
 
       img {
+        background:url(../img/checker.png);
+        border:1px solid #bbb;
         max-width:45%;
         max-height:75px;
         padding-top:4px;
